--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>🤖 Mood Analysis - Chat About Your Feelings</h1>
-
+        <h1>🤖 MoodBot - Talk About Your Feelings</h1>
+          <h2>Hey, Wanna talk about your day? Feel free to chat!!</h2>
         <div class="chatbox">
             {% for chat in chat_history %}
                 <p><strong>You:</strong> {{ chat.user }}</p>
